--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,15 @@ a {
   text-decoration: none;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
+input {
+  font-size: initial;
+}
+
 * {
   box-sizing: border-box;
 }
